--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@fontsource/montserrat": "^5.1.1",
     "@fontsource/nunito": "^5.1.1",
     "@fontsource/roboto": "^5.1.1",
+    "@react-router/dev": "^7.2.0",
+    "@react-router/fs-routes": "^7.2.0",
+    "@react-router/node": "^7.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -23,13 +27,13 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "prettier": "3.5.2",
     "sass": "^1.85.1",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.25.0",
     "vite": "^6.2.0"
   }
 }
