--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,10 +27,14 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@app/*": [
+        "./app/*"
       ]
     }
   },
   "include": [
-    "src"
+    "src",
+    "app"
   ]
 }
