--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-router/dev": "^7.2.0",
     "@react-router/fs-routes": "^7.2.0",
     "@react-router/node": "^7.2.0",
+    "isbot": "^5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0"
