--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5173 --open",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && react-router build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
